testdata/baselines/reference/submodule/compiler/jsFileCompilationExportAssignmentSyntax.errors.txt
a.js(1,10): error TS2304: Cannot find name 'b'.


==== a.js (1 errors) ====
    export = b;
             ~
!!! error TS2304: Cannot find name 'b'.